# cs539_robot_grasp_generation

./: .gitignore  notes.txt  readme.md  train.py
data/: base_dataset.py  grasp_sampling_data.py
grasp_gen/: CMakeLists.txt  README.md  package.xml
grasp_gen/desc/: bowl.urdf
grasp_gen/launch/: run.launch  sim.launch
grasp_gen/src/: controller.cpp  tf_broadcaster.cpp
models/: grasp_net.py  losses.py  networks.py
