<?xml version="1.0"?>
<package format="2">
  <name>grasp_gen</name>
  <version>0.0.0</version>
  <description>Grasp_gen sim test</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="agandhi2@wpi.edu">agandhi2</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>moveit_planner</build_depend>
  <build_depend>franka_gripper</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>moveit_planner</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>

  </export>
</package>
